RESOLVED FIXED28266
CSS Animation does not animate multiple background positions
https://bugs.webkit.org/show_bug.cgi?id=28266
Summary CSS Animation does not animate multiple background positions
Joshua Dickens
Reported 2009-08-13 10:20:43 PDT
When multiple background images are defined on an element, it is currently only possible to animate the first background image via CSS Animation keyframes. Steps to reproduce: 1) Create an element with the 'animated' class assigned 2) define the class to use multiple background images 3) add an animation keyframes set that animates the second background image's x-position Results Background position does not animate Expected Background position should animate Sample CSS: .animated { background-repeat: repeat-x; background-image: -webkit-gradient(linear, 0 100%, 0 0, from(rgba(255,255,255,0)), to(rgba(255,255,255, 1))), url('someimage.png'); -webkit-animation-name: 'my-animation'; -webkit-animation-duration: .3s; -webkit-animation-iteration-count: infinite; } @-webkit-keyframes my-animation { from { -webkit-animation-timing-function: linear; background-position-x: 0px, 0px; // alternatively: background-position: 0px 0px, 0px 0px; } to { -webkit-animation-timing-function: linear; background-position-x: 0px, 20px; // alternatively: background-position: 0px 0px, 20px 0px; } }
Attachments
Work in progress (7.38 KB, patch)
2009-08-14 09:11 PDT, Simon Fraser (smfr)
no flags
Patch (20.18 KB, patch)
2009-08-15 11:18 PDT, Simon Fraser (smfr)
andersca: review+
Patch for multiple shadow animation (8.70 KB, patch)
2009-08-15 12:24 PDT, Simon Fraser (smfr)
no flags
Patch for multiple shadow animation (8.85 KB, patch)
2009-08-15 16:39 PDT, Simon Fraser (smfr)
andersca: review+
Simon Fraser (smfr)
Comment 1 2009-08-13 11:29:02 PDT
There are several other properties for which we only animate the first one (e.g. shadows). We should fix them all.
Simon Fraser (smfr)
Comment 2 2009-08-14 09:11:56 PDT
Created attachment 34844 [details] Work in progress
Simon Fraser (smfr)
Comment 3 2009-08-15 11:18:35 PDT
Simon Fraser (smfr)
Comment 4 2009-08-15 12:24:59 PDT
Created attachment 34903 [details] Patch for multiple shadow animation
Simon Fraser (smfr)
Comment 5 2009-08-15 16:36:51 PDT
Comment on attachment 34903 [details] Patch for multiple shadow animation This patch is reversing the shadows.
Simon Fraser (smfr)
Comment 6 2009-08-15 16:39:38 PDT
Created attachment 34907 [details] Patch for multiple shadow animation
Anders Carlsson
Comment 7 2009-08-15 17:57:35 PDT
Comment on attachment 34907 [details] Patch for multiple shadow animation r=me
Anders Carlsson
Comment 8 2009-08-15 18:02:19 PDT
Comment on attachment 34900 [details] Patch r=me
Note You need to log in before you can comment on or make changes to this bug.