2009-08-15  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Anders Carlsson.

        Make transitions work for position and size of multiple backgrounds and masks.
        https://bugs.webkit.org/show_bug.cgi?id=28266

        Make background-position, background-size, -webkit-mask-position and -webkit-mask-size
        properties animatable with multiple backgrounds, rather than just animating the first one.

        Tests: transitions/multiple-background-size-transitions.html
               transitions/multiple-background-transitions.html
               transitions/multiple-mask-transitions.html

        * page/animation/AnimationBase.cpp:
        (WebCore::FillLayerPropertyWrapperBase::FillLayerPropertyWrapperBase):
        (WebCore::FillLayerPropertyWrapperBase::~FillLayerPropertyWrapperBase):
        (WebCore::FillLayerPropertyWrapperGetter::FillLayerPropertyWrapperGetter):
        (WebCore::FillLayerPropertyWrapperGetter::equals):
        (WebCore::FillLayerPropertyWrapper::FillLayerPropertyWrapper):
        (WebCore::FillLayerPropertyWrapper::blend):
        (WebCore::FillLayersPropertyWrapper::FillLayersPropertyWrapper):
        (WebCore::FillLayersPropertyWrapper::equals):
        (WebCore::FillLayersPropertyWrapper::blend):
        (WebCore::ensurePropertyMap):
        * rendering/style/FillLayer.h:
        (WebCore::FillLayer::setXPosition):
        (WebCore::FillLayer::setYPosition):
        (WebCore::FillLayer::setSize):

Canonical link: https://commits.webkit.org/38932@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@47331 268f45cc-cd09-0410-ab3c-d52691b4dbfc